# OxForth

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: compiler.rs  lib.rs  misc.rs  vm.rs
src/compiler/: parser.rs  scanner.rs
src/vm/: interpreter.rs
